--- a/Workspaces/Spectacles/Layout.yaml
+++ b/Workspaces/Spectacles/Layout.yaml
@@ -4,36 +4,44 @@ dock:
     items:
       - items:
           - items:
-              - persistentName: Snap.Plugin.Gui.SceneHierarchyEditor
-                Uuid: ef9f564d-e06d-4efb-9178-f9465f79a5e2
-            type: section
-            current: 0
+              - items:
+                  - persistentName: Snap.Plugin.Gui.SceneHierarchyEditor
+                    Uuid: 5af2c4d9-dca5-4dcd-9d25-6d0528fcee4e
+                type: section
+                current: 0
+              - items:
+                  - persistentName: Snap.Plugin.Gui.AssetBrowser
+                    Uuid: b644b329-5fbd-40ea-8856-a449cae2149a
+                type: section
+                current: 0
+            sizes:
+              - 482
+              - 251
+            type: splitter
+            orientation: vertical
           - items:
-              - persistentName: Snap.Plugin.Gui.AssetBrowser
-                Uuid: 69922c45-acf1-4a8c-b92a-117e924ece47
-            type: section
-            current: 0
+              - items:
+                  - persistentName: Snap.Plugin.Gui.InspectorPanel
+                    Uuid: 780d9164-e681-4de1-b586-5213ed5523b9
+                  - persistentName: Snap.Plugin.Gui.SceneEditor
+                    Uuid: 3cc626c1-9bfe-48da-822a-60a1388844e7
+                type: section
+                current: 0
+              - items:
+                  - persistentName: Snap.Plugin.Gui.LoggerPanel
+                    Uuid: 81de965d-0c94-4d28-82cf-901740003a1f
+                type: section
+                current: 0
+            sizes:
+              - 367
+              - 366
+            type: splitter
+            orientation: vertical
         sizes:
-          - 453
-          - 280
+          - 244
+          - 472
         type: splitter
-        orientation: vertical
-      - items:
-          - items:
-              - persistentName: Snap.Plugin.Gui.InspectorPanel
-                Uuid: 780d9164-e681-4de1-b586-5213ed5523b9
-            type: section
-            current: 0
-          - items:
-              - persistentName: Snap.Plugin.Gui.LoggerPanel
-                Uuid: 81de965d-0c94-4d28-82cf-901740003a1f
-            type: section
-            current: 0
-        sizes:
-          - 367
-          - 366
-        type: splitter
-        orientation: vertical
+        orientation: horizontal
       - items:
           - persistentName: Snap.Plugin.Gui.PreviewPanel
             Uuid: 52fc2a95-41a3-427b-a138-1e00eb1c405e
@@ -44,8 +52,7 @@ dock:
         type: section
         current: 0
     sizes:
-      - 336
-      - 413
-      - 679
+      - 718
+      - 712
     type: splitter
     orientation: horizontal
