--- a/Workspaces/Spectacles/Layout.yaml
+++ b/Workspaces/Spectacles/Layout.yaml
@@ -7,8 +7,10 @@ dock:
               - items:
                   - persistentName: Snap.Plugin.Gui.SceneHierarchyEditor
                     Uuid: 5af2c4d9-dca5-4dcd-9d25-6d0528fcee4e
+                  - persistentName: Snap.Plugin.Gui.SpectaclesMonitorPanel
+                    Uuid: 761d383d-c455-46cb-97eb-fc5607f9be8b
                 type: section
-                current: 0
+                current: 1
               - items:
                   - persistentName: Snap.Plugin.Gui.AssetBrowser
                     Uuid: b644b329-5fbd-40ea-8856-a449cae2149a
